k8s/monitoring/05-grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: grafana.akimovp.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kp-grafana  
            port:
              number: 80
